pp-revised/done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="contents">
 
         <div class="bio-header">
-            <img class="user-pic" src="assets/img/user-placeholder.png" alt="placeholder">
+            <img class="user-pic" src="img/user-placeholder.png" alt="placeholder">
             <div class="bio-title">
                 <h2>Andre Alega</h2>
                 <p>Full-Stack Web Developer</p>
