pp-revised-1/done
- add border to each div
- change bg color

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>Full-time</p>
                 <p>17</p>
                 <p>Jakarta, Indonesia</p>
-                <p>AndreAlega69@honeyselect.com</p>
+                <p>extraordinairegentlement@gmail.com</p>
             </div>
         </div>
 
