--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="bio-header">
             <img class="user-pic" src="img/user-placeholder.png" alt="placeholder">
             <div class="bio-title">
-                <h2>Andre Alega</h2>
+                <h2>Student</h2>
                 <p>Full-Stack Web Developer</p>
                 <button class="ctc">Contact</button>
                 <button class="rsm">Resume</button>
@@ -41,7 +41,7 @@
                 <p>Full-time</p>
                 <p>17</p>
                 <p>Jakarta, Indonesia</p>
-                <p>extraordinairegentlement@gmail.com</p>
+                <p>andre@gmail.com</p>
             </div>
         </div>
 
